@@ -9,6 +9,7 @@ import org.apache.http.message.BasicStatusLine;
 import org.junit.Test;
 
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
@@ -82,7 +83,7 @@ public class DelayedResponseLevelRetryHandlerTest {
         HttpClientContext ctx = new HttpClientContext();
         int lastExecutionCount = maxRetries + 1;
         List<Duration> expectedIntervals =
-                com.yahoo.vespa.jdk8compat.List.of(
+                Arrays.asList(
                         startDelay, Duration.ofSeconds(1), Duration.ofSeconds(2), Duration.ofSeconds(4),
                         Duration.ofSeconds(5), Duration.ofSeconds(5), Duration.ofSeconds(5), Duration.ofSeconds(5),
                         Duration.ofSeconds(5), Duration.ofSeconds(5), Duration.ofSeconds(5));
@@ -98,7 +99,7 @@ public class DelayedResponseLevelRetryHandlerTest {
 
         DelayedResponseLevelRetryHandler handler = DelayedResponseLevelRetryHandler.Builder
                 .withFixedDelay(Duration.ofSeconds(2), maxRetries)
-                .retryForStatusCodes(com.yahoo.vespa.jdk8compat.List.of(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_GATEWAY))
+                .retryForStatusCodes(Arrays.asList(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_GATEWAY))
                 .build();
 
         HttpResponse response = createResponse(HttpStatus.SC_SERVICE_UNAVAILABLE);
@@ -114,7 +115,7 @@ public class DelayedResponseLevelRetryHandlerTest {
     public void does_not_retry_for_non_listed_exception() {
         DelayedResponseLevelRetryHandler handler = DelayedResponseLevelRetryHandler.Builder
                 .withFixedDelay(Duration.ofSeconds(2), 2)
-                .retryForStatusCodes(com.yahoo.vespa.jdk8compat.List.of(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_GATEWAY))
+                .retryForStatusCodes(Arrays.asList(HttpStatus.SC_SERVICE_UNAVAILABLE, HttpStatus.SC_BAD_GATEWAY))
                 .build();
 
         HttpResponse response = createResponse(HttpStatus.SC_OK);
